syntax = "proto3";

package book;

service BookService {
  rpc Create (CreateBookRequest) returns (Book) {}
  rpc FindAll (Empty) returns (Books) {}
  rpc FindOne (BookById) returns (Book) {}
  rpc Update (UpdateBookRequest) returns (Book) {}
  rpc Remove (BookById) returns (Empty) {}
}

message Empty {}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  float price = 4;
}

message Books {
  repeated Book books = 1;
}

message BookById {
  int32 id = 1;
}

message CreateBookRequest {
  string title = 1;
  string author = 2;
  float price = 3;
}

message UpdateBookRequest {
  int32 id = 1;
  string title = 2;
  string author = 3;
  float price = 4;
}